Add build script for OpenMRS custom modules with artifact copying
- Introduced `build-modules.ps1` PowerShell script to build OpenMRS custom modules.
- Integrated Maven commands to package specified modules.
- Added functionality to copy `.omod` and `.jar` artifacts to the `openmrs-modules` directory.
- Included error handling for missing tools (Java and Maven).
- Provided an option to skip tests during the build process.